# langchain-babeltele

./: .gitignore  LICENSE  README.md  paper.txt  pyproject.toml
examples/: README.md  compress_history.py  default.env  guardrail.py  hello.py  long_term_memory.py  strategies.py
langchain_babeltele/: __init__.py  _internal.py  compressor.py  core.py  memory.py  middleware.py  prompts.py  result.py  verify.py
tests/: conftest.py  test_compressor.py  test_core.py  test_memory.py  test_middleware.py  test_verify.py
